--- a/03-css/02-pseudo.css
+++ b/03-css/02-pseudo.css
@@ -2,3 +2,13 @@
   width: 600px;
   margin: 40px auto;
 }
+
+/*pseudoletter: two colons*/
+p::first-letter {
+  font-size: 3em;
+}
+
+/*pseudoclass: one colon*/
+p:hover {
+  background-color: lightskyblue;
+}
